# stailwc

./: .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  build.rs  contributing.md  index.d.ts  install.js  package.json  readme.md  rust-toolchain  split.js  tw.json
.github/workflows/: ci.yml  release.yml  snapshot.yml
crates/swc-utils/: Cargo.toml
crates/swc-utils/src/: lib.rs
crates/tailwind-config/: Cargo.toml
crates/tailwind-config/src/: lib.rs
crates/tailwind-parse/: Cargo.toml
crates/tailwind-parse-macro/: Cargo.toml
crates/tailwind-parse-macro/src/: lib.rs
crates/tailwind-parse/src/: directive.rs  expression.rs  lib.rs  literal.rs  plugin.rs  plugin_impl.rs  subject.rs
crates/tailwind-parse/src/eval/: macros.rs  mod.rs  plugin.rs  prose.rs  util.rs
crates/tailwind-plugins/: Cargo.toml
crates/test-generator/: Cargo.toml
crates/test-generator/src/: lib.rs  main.rs
data/: form.css  reset.css
examples/nextjs/: next.config.js  package.json  tailwind.config.js
examples/nextjs-emotion/: next.config.js  package.json  stailwc.d.ts
examples/nextjs-emotion/pages/: _app.tsx  index.tsx
examples/nextjs-styled-components/: next.config.js  package.json
examples/nextjs-styled-components/pages/: _app.tsx  _document.tsx  index.tsx
examples/nextjs/pages/: _app.tsx  index.tsx
examples/swc/: .gitignore  index.html  index.tsx  install.js  package.json  spack.config.js
examples/vite/: package.json  vite.config.ts
examples/vite/src/: App.tsx  main.tsx
snapshots/: !general.js  !important.js  !imports.js  !namelessImport.js  !ordering.js  !properties.js  !variantGrouping.js  !variants.js  accentColor.js  addBase.js  addThemeBase.js  alignContent.js  alignItems.js  alignSelf.js  animation.js  appearance.js  arbitraryProperties.js  arbitraryVariants.js  aspectRatio.js  autoCssProp.js  autoCssPropEmotion.js  autoCssPropWithStyled.js  autoCssPropWithStyledEmotion.js  backdropBlur.js  backdropBrightness.js  backdropContrast.js  backdropGrayscale.js  backdropHueRotate.js  backdropInvert.js  backdropOpacity.js  backdropSaturate.js  backdropSepia.js  backgroundAttachment.js  backgroundBlendMode.js  backgroundClip.js  backgroundColor.js  backgroundImage.js  backgroundOpacity.js  backgroundOrigin.js  backgroundPosition.js  (+181 more)
src/: config.rs  css.rs  depth_stack.rs  infer.rs  lib.rs  plugin.rs  tailwind_parse.rs  test.rs  util.rs
src/engine/: emotion.rs  mod.rs  styled_components.rs
src/parse/: from.rs  literal.rs  mod.rs  nom.rs
src/snapshot/: arbitrary_properties_arbitrary_properties.rs  arbitrary_variants_arbitrary_variants.rs  auto_css_prop_auto_css_prop.rs  comments_comments.rs  config_config.rs  config_ts_config_ts.rs  content_content.rs  css_prop_styled_components_auto_css_prop.rs  css_prop_styled_components_auto_css_prop_with_styled.rs  dark_light_mode_array_dark_light_mode_array.rs  directional_borders_directional_borders.rs  fixtures_general.rs  fixtures_important.rs  fixtures_ordering.rs  fixtures_variants.rs  fluid_container_fluid_container.rs  group_group.rs  include_class_names_include_class_names.rs  line_clamp_line_clamp.rs  mod.rs  negative_negative.rs  peers_peers.rs  plugin_aspect_ratio_plugin_aspect_ratio.rs  plugin_examples_plugin_examples.rs  plugin_forms_class_strategy_plugin_typography.rs  plugin_gap_fallback_plugin_gap_fallback.rs  plugin_typography_plugin_typography.rs  plugin_user_parent_selector_plugin_user_parent_selector.rs  plugins_plugins.rs  prefix_prefix.rs  preflight_preflight.rs  presets_presets.rs  sassy_pseudo_sassy_pseudo.rs  screen_import_screen_import.rs  screens_screens.rs  separator_separator.rs  short_css_short_css.rs  stitches_stitches_dot_syntax.rs  theme_values_to_string_theme_values_to_string.rs  user_plugin_ordering_user_plugin_ordering.rs  (+171 more)
