[package]
edition = "2021"
name = "stailwc"
version = "0.1.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

[dependencies]
chumsky = "0.8.0"
itertools = "0.10.3"
serde = "1"
swc_atoms = "0.3.1"
swc_common = "0.26.0"
swc_ecma_visit = "0.75.0"
swc_ecmascript = "0.186.0"
swc_plugin = "0.88.2"
swc_plugin_macro = "0.8.1"
tracing = "0.1.36"

[dev-dependencies]
swc_ecma_parser = {version = "0.116.0", features = ["typescript"]}
swc_ecma_transforms_testing = "0.104.0"
