[package]
build = "build.rs"
description = "An experimental transpiler to bring tailwind macros to SWC rocket"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "stailwc"
readme = "readme.md"
repository = "https://github.com/arlyon/stailwc"
version ="0.5.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

[dependencies]
itertools = "0.10.3"
nom = "7.1.1"
serde = "1"
serde_json = "1.0.83"
serde_path_to_error = "0.1.8"
swc_atoms = "0.3.1"
swc_common = "0.26.0"
swc_ecma_visit = "0.75.0"
swc_ecmascript = "0.186.0"
swc_plugin = "0.88.2"
swc_plugin_macro = "0.8.1"
tracing = "0.1.36"

[dev-dependencies]
anyhow = "1.0.62"
cmd_lib = "1.3.0"
swc_ecma_parser = {version = "0.116.0", features = ["typescript"]}
swc_ecma_transforms_testing = "0.104.0"
test-case = "2.2.1"

[build-dependencies]
glob = "0.3.0"
