[package]
build = "build.rs"
description = "An experimental transpiler to bring tailwind macros to SWC rocket"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "stailwc"
readme = "readme.md"
repository = "https://github.com/arlyon/stailwc"
version ="0.10.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

[dependencies]
itertools = "0.10.3"
nom = "7.1.1"
nom_locate = "4.0.0"
once_cell = "1.15.0"
serde = "1"
serde_json = "1.0.83"
serde_path_to_error = "0.1.8"
swc_core = {version = "=0.40.16", features = ["ecma_visit", "ecma_ast", "plugin_transform"]}
tailwind-config = {version ="0.10.0", path = "crates/tailwind-config"}
tailwind-parse = {version ="0.10.0", path = "crates/tailwind-parse"}
tracing = "0.1.36"

[dev-dependencies]
anyhow = "1.0.62"
cmd_lib = "1.3.0"
swc_core = {version = "=0.40.16", features = ["testing_transform", "ecma_parser"]}
test-case = "2.2.1"

[build-dependencies]
glob = "0.3.0"

[workspace]
members = [
  ".",
  "crates/*",
]
