[package]
description = "Some basic SWC utils"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "stailwc-swc-utils"
repository = "https://github.com/arlyon/stailwc"
version = "0.9.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_core = {version = "=0.55.5", features = ["common", "ecma_visit", "ecma_ast"]}
