[package]
description = "Type definitions for the tailwind config file"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "tailwind-config"
repository = "https://github.com/arlyon/stailwc"
version = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.147", features = ["derive"]}
