[package]
description = "Procedural macro for tailwind-parse"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "tailwind-parse-macro"
repository = "https://github.com/arlyon/stailwc"
version = "0.16.0"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = {version = "1.0.103", features = ["full"]}
