[package]
description = "Parses tailwind directives and yields user-friendly errors"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "tailwind-parse"
repository = "https://github.com/arlyon/stailwc"
version = "0.13.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eddie = "0.4.2"
itertools = "0.10.5"
nom = "7.1.1"
nom_locate = "4.0.0"
phf = {version = "0.11.1", features = ["macros"]}
stailwc-swc-utils = {version = "0.13.0", path = "../swc-utils"}
swc_core = {version = "=0.55.5", features = ["common", "ecma_ast"]}
tailwind-config = {version = "0.13.0", path = "../tailwind-config"}
tailwind-parse-macro = {version = "0.10.0", path = "../tailwind-parse-macro"}
thiserror = "1.0.37"

[dev-dependencies]
anyhow = "1.0.66"
pretty_assertions = "1.3.0"
test-case = "2.2.2"
